[gd_scene load_steps=5 format=2]

[ext_resource path="res://Knight.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/art/knight/body_enemy.png" type="Texture" id=2]
[ext_resource path="res://assets/art/knight/helm_enemy.png" type="Texture" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="right_hand" parent="." index="0"]
position = Vector2( 7, 0 )

[node name="MeleeWeapon" parent="right_hand" index="0"]
rotation = 0.0

[node name="body" parent="." index="2"]
rotation = 3.14159
texture = ExtResource( 2 )

[node name="head" parent="." index="3"]
rotation = 3.14159
texture = ExtResource( 3 )

[node name="attack_cooldown" type="Timer" parent="." index="5"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
